--- a/html/profile.html
+++ b/html/profile.html
@@ -15,17 +15,17 @@
             <div class="top">
                 <div class="home-link">
                     <iconify-icon width="20px" height="20px" class="icon" icon="iconamoon:home-thin"></iconify-icon>
-                    <a href="#"><p>Home</p></a>
+                    <a href="./home.html"><p>Home</p></a>
                 </div>
                 <div class="profile-link">
                     <iconify-icon width="20px" height="20px" class="icon" icon="iconamoon:profile-circle-thin"></iconify-icon>
-                    <a href="#"><p>Profile</p></a>
+                    <a href="./profile.html"><p>Profile</p></a>
                 </div>
             </div>
             <div class="bottom">
                 <div class="logout">
                     <iconify-icon width="20px" height="20px" class="icon" icon="teenyicons:logout-solid"></iconify-icon>
-                    <a href="#"><p>Logout</p></a>
+                    <a href="./login.html"><p>Logout</p></a>
                 </div>
                 <div class="user-profile">
                     <div class="image">
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="edit-profile">
-                    <a href="#"><button>Edit Profile</button></a>
+                    <a href="./updateProfile.html"><button>Edit Profile</button></a>
                 </div>
                 <div class="delete-account">
                     <a href="#"><button>Deactivate Account</button></a>
@@ -127,9 +127,11 @@
                                 <small>7m</small>
                             </div>
                             <div class="info">
-                                <p>
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, praesentium.
-                                </p>
+                                <a href="./post.html">
+                                    <p>
+                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, praesentium.
+                                    </p>
+                                </a>
                             </div>
                             <div class="info-image">
                                 <img src="../assests/img/abstract-navy-blue-digital-grid-technology-background/software-developer-6521720_1920.jpg" alt="post-image">
