--- a/html/post.html
+++ b/html/post.html
@@ -16,17 +16,23 @@
             <div class="top">
                 <div class="home-link">
                     <iconify-icon width="20px" height="20px" class="icon" icon="iconamoon:home-thin"></iconify-icon>
-                    <a href="#"><p>Home</p></a>
+                    <a href="./home.html">
+                        <p>Home</p>
+                    </a>
                 </div>
                 <div class="profile-link">
                     <iconify-icon width="20px" height="20px" class="icon" icon="iconamoon:profile-circle-thin"></iconify-icon>
-                    <a href="#"><p>Profile</p></a>
+                    <a href="./profile.html">
+                        <p>Profile</p>
+                    </a>
                 </div>
             </div>
             <div class="bottom">
                 <div class="logout">
                     <iconify-icon width="20px" height="20px" class="icon" icon="teenyicons:logout-solid"></iconify-icon>
-                    <a href="#"><p>Logout</p></a>
+                    <a href="./login.html">
+                        <p>Logout</p>
+                    </a>
                 </div>
                 <div class="user-profile">
                     <div class="image">
