Pre-commit tests

--- a/html/setNewPassword.html
+++ b/html/setNewPassword.html
@@ -31,6 +31,12 @@
                 <div class="form-inputs">
 
                     <div class="password">
+                        <label for="otp">One Time Password</label>
+                        <input type="password" name="otp" id="otp" placeholder="One Time Password">
+                        <div class="otp-error"></div>
+                    </div>
+
+                    <div class="password">
                         <label for="new-password">New Password</label>
                         <input type="password" name="new-password" id="new-password" placeholder="New Password">
                         <div class="new-password-error"></div>
