--- a/html/register.html
+++ b/html/register.html
@@ -48,16 +48,10 @@
                         <div class="email-error"></div>
                     </div>
 
-                    <div class="password">
-                        <label for="password">Password</label>
-                        <input type="password" name="password" id="password" placeholder="At least 8 characters">
-                        <div class="password-error"></div>
-                    </div>
-
                     <div class="profile-picture">
                         <div class="icon">
                             <iconify-icon width="20px" height="20px" icon="ic:round-image"></iconify-icon>
-                            <label for="profile-picture">Choose Profile Picture</label>
+                            <label id="profile-picture-label" for="profile-picture">Choose Profile Picture</label>
                         </div>
                         <input type="File"  id="profile-picture" accept="image/*">
                     </div>
