--- a/html/resetToken.html
+++ b/html/resetToken.html
@@ -32,7 +32,7 @@
                     <div class="token">
                         <label for="token">Token</label>
                         <input type="text" name="token" id="token" placeholder="Rest password token">
-                        <div class="token-error"></div>
+                        <div class="error"></div>
                     </div>
 
                 </div>
