--- a/html/home.html
+++ b/html/home.html
@@ -82,7 +82,7 @@
 
         <section class="followers">
             <div class="search">
-                <input type="text" name="search-user" id="search-user" placeholder="followers">
+                <input type="text" name="search-user" id="search-user" placeholder="Search people you are following by first name...">
             </div>
             <div class="users">
                 <div class="title">
