--- a/html/home.html
+++ b/html/home.html
@@ -60,7 +60,8 @@
                         <div class="image">
                             <img id="loggedUserProfilePic" src="../assests/img/abstract-navy-blue-digital-grid-technology-background/user.png" alt="user-profile-image">
                         </div>
-                        <input type="text" name="new-post" id="new-post" placeholder="Create new post.">
+                        <!-- <input type="text" name="new-post" id="new-post" placeholder="Create new post."> -->
+                        <textarea name="" id="new-post" cols="50" rows="2" placeholder="Create new post."></textarea>
                     </div>
 
                     <div class="additional-post-info">
