--- a/html/register.html
+++ b/html/register.html
@@ -52,9 +52,12 @@
                         <div class="icon">
                             <iconify-icon width="20px" height="20px" icon="ic:round-image"></iconify-icon>
                             <label id="profile-picture-label" for="profile-picture">Choose Profile Picture</label>
+                            <span class="loader"></span>
                         </div>
                         <input type="File"  id="profile-picture" accept="image/*">
                     </div>
+
+                    
                 </div>
 
                 
