--- a/html/updateProfile.html
+++ b/html/updateProfile.html
@@ -12,7 +12,7 @@
     
     <main>
         <section class="register-form">
-            <form id="sign-up-form" action="">
+            <form id="profile-update-form" action="">
                 
                 <div class="title">
                     <h2>Update Profile</h2  >
@@ -52,6 +52,7 @@
                         <div class="icon">
                             <iconify-icon width="20px" height="20px" icon="ic:round-image"></iconify-icon>
                             <label for="profile-picture">Choose Profile Picture</label>
+                            <span class="loader"></span>
                         </div>
                         <input type="File"  id="profile-picture" accept="image/*">
                     </div>
