--- a/html/post.html
+++ b/html/post.html
@@ -26,6 +26,12 @@
                         <p>Profile</p>
                     </a>
                 </div>
+                <div class="liked-posts-link">
+                    <iconify-icon width="20px" height="20px" class="icon" icon="clarity:bookmark-line"></iconify-icon>
+                    <a href="./likedPosts.html">
+                        <p>Liked</p>
+                    </a>
+                </div>
             </div>
             <div class="bottom">
                 <div class="logout">
