--- a/html/home.html
+++ b/html/home.html
@@ -76,7 +76,7 @@
                             
                         </label>
                         <input type="file" name="image" id="post-image">
-
+                        <span class="loader"></span>
                         <button type="submit">Post</button>
                     </div>
                 </form>
