Correcting render errors

--- a/html/likedPosts.html
+++ b/html/likedPosts.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="liked-posts-link">
                     <iconify-icon width="20px" height="20px" class="icon" icon="clarity:bookmark-line"></iconify-icon>
-                    <a href="./profile.html">
+                    <a href="./likedPosts.html">
                         <p>Liked</p>
                     </a>
                 </div>
