Cypress end to end tests

--- a/html/otherUserProfile.html
+++ b/html/otherUserProfile.html
@@ -14,19 +14,19 @@
         <section class="sidebar">
             <div class="top">
                 <div class="home-link">
-                    <iconify-icon width="20px" height="20px" class="icon" icon="iconamoon:home-thin"></iconify-icon>
+                    <a href="./home.html"><iconify-icon width="20px" height="20px" class="icon" icon="iconamoon:home-thin"></iconify-icon></a>
                     <a href="./home.html">
                         <p>Home</p>
                     </a>
                 </div>
                 <div class="profile-link">
-                    <iconify-icon width="20px" height="20px" class="icon" icon="iconamoon:profile-circle-thin"></iconify-icon>
+                    <a href="./profile.html"><iconify-icon width="20px" height="20px" class="icon" icon="iconamoon:profile-circle-thin"></iconify-icon></a>
                     <a href="./profile.html">
                         <p>Profile</p>
                     </a>
                 </div>
                 <div class="liked-posts-link">
-                    <iconify-icon width="20px" height="20px" class="icon" icon="clarity:bookmark-line"></iconify-icon>
+                    <a href="./likedPosts.html"><iconify-icon width="20px" height="20px" class="icon" icon="clarity:bookmark-line"></iconify-icon></a>
                     <a href="./likedPosts.html">
                         <p>Liked</p>
                     </a>
@@ -34,8 +34,8 @@
             </div>
             <div class="bottom">
                 <div class="logout">
-                    <iconify-icon width="20px" height="20px" class="icon" icon="teenyicons:logout-solid"></iconify-icon>
-                    <a id="logout" href="">
+                    <a id="logout" href=""><iconify-icon width="20px" height="20px" class="icon" icon="teenyicons:logout-solid"></iconify-icon></a>
+                    <a id="logout-text" href="">
                         <p>Logout</p>
                     </a>
                 </div>
