--- a/html/updateProfile.html
+++ b/html/updateProfile.html
@@ -51,7 +51,7 @@
                     <div class="profile-picture">
                         <div class="icon">
                             <iconify-icon width="20px" height="20px" icon="ic:round-image"></iconify-icon>
-                            <label for="profile-picture">Choose Profile Picture</label>
+                            <label id="profile-pic-icon" for="profile-picture">Choose Profile Picture</label>
                             <span class="loader"></span>
                         </div>
                         <input type="File"  id="profile-picture" accept="image/*">
