--- a/html/home.html
+++ b/html/home.html
@@ -15,19 +15,19 @@
         <section class="sidebar">
             <div class="top">
                 <div class="home-link">
-                    <iconify-icon width="20px" height="20px" class="icon" icon="iconamoon:home-thin"></iconify-icon>
+                    <a href="./home.html"><iconify-icon width="20px" height="20px" class="icon" icon="iconamoon:home-thin"></iconify-icon></a>
                     <a href="./home.html">
                         <p>Home</p>
                     </a>
                 </div>
                 <div class="profile-link">
-                    <iconify-icon width="20px" height="20px" class="icon" icon="iconamoon:profile-circle-thin"></iconify-icon>
+                    <a id="profileLink" href="./profile.html"><iconify-icon width="20px" height="20px" class="icon" icon="iconamoon:profile-circle-thin"></iconify-icon></a>
                     <a href="./profile.html">
                         <p>Profile</p>
                     </a>
                 </div>
                 <div class="liked-posts-link">
-                    <iconify-icon width="20px" height="20px" class="icon" icon="clarity:bookmark-line"></iconify-icon>
+                    <a id="likedPostLink" href="./likedPosts.html"><iconify-icon width="20px" height="20px" class="icon" icon="clarity:bookmark-line"></iconify-icon></a>
                     <a href="./likedPosts.html">
                         <p>Liked</p>
                     </a>
@@ -35,8 +35,8 @@
             </div>
             <div class="bottom">
                 <div class="logout">
-                    <iconify-icon width="20px" height="20px" class="icon" icon="teenyicons:logout-solid"></iconify-icon>
-                    <a id="logout" href="">
+                    <a id="logout" href=""><iconify-icon width="20px" height="20px" class="icon" icon="teenyicons:logout-solid"></iconify-icon></a>
+                    <a id="logout-text" href="">
                         <p>Logout</p>
                     </a>
                 </div>
@@ -67,17 +67,17 @@
                             <img id="loggedUserProfilePic" src="../assests/img/abstract-navy-blue-digital-grid-technology-background/user.png" alt="user-profile-image">
                         </div>
                         <!-- <input type="text" name="new-post" id="new-post" placeholder="Create new post."> -->
-                        <textarea name="" id="new-post" cols="50" rows="2" placeholder="Create new post."></textarea>
+                        <textarea name="new-post" id="new-post" cols="50" rows="2" placeholder="Create new post."></textarea>
                     </div>
 
                     <div class="additional-post-info">
-                        <label for="post-image">
-                            <iconify-icon width="30px" height="30px" class="icon" icon="ic:round-image"></iconify-icon>
+                        <label for="post-image" id="post-image-icon">
+                            <iconify-icon  width="30px" height="30px" class="icon" icon="ic:round-image"></iconify-icon>
                             
                         </label>
                         <input type="file" name="image" id="post-image">
                         <span class="loader"></span>
-                        <button type="submit">Post</button>
+                        <button id="new-post-btn" type="submit">Post</button>
                     </div>
                 </form>
             </div>
